lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> <empty>
Rule 2     start -> instructions
Rule 3     instructions -> instruction
Rule 4     instructions -> instructions instruction
Rule 5     break -> BREAK
Rule 6     continue -> CONTINUE
Rule 7     instruction -> instruction_if
Rule 8     instruction -> instruction_for
Rule 9     instruction -> instruction_while
Rule 10    instruction -> instruction_return ;
Rule 11    instruction -> instruction_assign ;
Rule 12    instruction -> instruction_print ;
Rule 13    instruction -> break ;
Rule 14    instruction -> continue ;
Rule 15    instruction -> { instructions }
Rule 16    instruction_return -> RETURN
Rule 17    instruction_return -> RETURN expr
Rule 18    instruction_print -> PRINT printables
Rule 19    printables -> printable
Rule 20    printables -> printables , printable
Rule 21    str -> STRING
Rule 22    printable -> expr
Rule 23    printable -> str
Rule 24    instruction_assign -> assignable = expr
Rule 25    instruction_assign -> assignable ADDASSIGN expr
Rule 26    instruction_assign -> assignable SUBASSIGN expr
Rule 27    instruction_assign -> assignable MULASSIGN expr
Rule 28    instruction_assign -> assignable DIVASSIGN expr
Rule 29    id -> ID
Rule 30    assignable -> id
Rule 31    assignable -> matrix_element
Rule 32    assignable -> vector_element
Rule 33    matrix_element -> id [ INTNUM , INTNUM ]
Rule 34    vector_element -> id [ INTNUM ]
Rule 35    expr -> expr '
Rule 36    expr -> ( expr )
Rule 37    expr -> matrix_function ( expr )
Rule 38    expr -> assignable
Rule 39    expr -> matrix
Rule 40    expr -> - expr
Rule 41    expr -> INTNUM
Rule 42    expr -> FLOAT
Rule 43    expr -> expr + expr
Rule 44    expr -> expr - expr
Rule 45    expr -> expr * expr
Rule 46    expr -> expr / expr
Rule 47    expr -> expr DOTADD expr
Rule 48    expr -> expr DOTSUB expr
Rule 49    expr -> expr DOTMUL expr
Rule 50    expr -> expr DOTDIV expr
Rule 51    expr -> expr > expr
Rule 52    expr -> expr < expr
Rule 53    expr -> expr EQ expr
Rule 54    expr -> expr NEQ expr
Rule 55    expr -> expr LEQ expr
Rule 56    expr -> expr GEQ expr
Rule 57    matrix_function -> ZEROS
Rule 58    matrix_function -> ONES
Rule 59    matrix_function -> EYE
Rule 60    instruction_if -> IF ( expr ) instruction
Rule 61    instruction_if -> IF ( expr ) instruction ELSE instruction
Rule 62    instruction_for -> FOR id = expr : expr instruction
Rule 63    instruction_while -> WHILE ( expr ) instruction
Rule 64    matrix -> [ vectors ]
Rule 65    vectors -> vectors , vector
Rule 66    vectors -> vector
Rule 67    vector -> [ variables ]
Rule 68    variables -> variables , variable
Rule 69    variables -> variable
Rule 70    variable -> INTNUM
Rule 71    variable -> FLOAT
Rule 72    variable -> assignable

Terminals, with rules where they appear

'                    : 35
(                    : 36 37 60 61 63
)                    : 36 37 60 61 63
*                    : 45
+                    : 43
,                    : 20 33 65 68
-                    : 40 44
/                    : 46
:                    : 62
;                    : 10 11 12 13 14
<                    : 52
=                    : 24 62
>                    : 51
ADDASSIGN            : 25
BREAK                : 5
CONTINUE             : 6
DIVASSIGN            : 28
DOTADD               : 47
DOTDIV               : 50
DOTMUL               : 49
DOTSUB               : 48
ELSE                 : 61
EQ                   : 53
EYE                  : 59
FLOAT                : 42 71
FOR                  : 62
GEQ                  : 56
ID                   : 29
IF                   : 60 61
INTNUM               : 33 33 34 41 70
LEQ                  : 55
MULASSIGN            : 27
NEQ                  : 54
ONES                 : 58
PRINT                : 18
RETURN               : 16 17
STRING               : 21
SUBASSIGN            : 26
WHILE                : 63
ZEROS                : 57
[                    : 33 34 64 67
]                    : 33 34 64 67
error                : 
{                    : 15
}                    : 15

Nonterminals, with rules where they appear

assignable           : 24 25 26 27 28 38 72
break                : 13
continue             : 14
expr                 : 17 22 24 25 26 27 28 35 36 37 40 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 60 61 62 62 63
id                   : 30 33 34 62
instruction          : 3 4 60 61 61 62 63
instruction_assign   : 11
instruction_for      : 8
instruction_if       : 7
instruction_print    : 12
instruction_return   : 10
instruction_while    : 9
instructions         : 2 4 15
matrix               : 39
matrix_element       : 31
matrix_function      : 37
printable            : 19 20
printables           : 18 20
start                : 0
str                  : 23
variable             : 68 69
variables            : 67 68
vector               : 65 66
vector_element       : 32
vectors              : 64 65

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> .
    (2) start -> . instructions
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction
    (7) instruction -> . instruction_if
    (8) instruction -> . instruction_for
    (9) instruction -> . instruction_while
    (10) instruction -> . instruction_return ;
    (11) instruction -> . instruction_assign ;
    (12) instruction -> . instruction_print ;
    (13) instruction -> . break ;
    (14) instruction -> . continue ;
    (15) instruction -> . { instructions }
    (60) instruction_if -> . IF ( expr ) instruction
    (61) instruction_if -> . IF ( expr ) instruction ELSE instruction
    (62) instruction_for -> . FOR id = expr : expr instruction
    (63) instruction_while -> . WHILE ( expr ) instruction
    (16) instruction_return -> . RETURN
    (17) instruction_return -> . RETURN expr
    (24) instruction_assign -> . assignable = expr
    (25) instruction_assign -> . assignable ADDASSIGN expr
    (26) instruction_assign -> . assignable SUBASSIGN expr
    (27) instruction_assign -> . assignable MULASSIGN expr
    (28) instruction_assign -> . assignable DIVASSIGN expr
    (18) instruction_print -> . PRINT printables
    (5) break -> . BREAK
    (6) continue -> . CONTINUE
    (30) assignable -> . id
    (31) assignable -> . matrix_element
    (32) assignable -> . vector_element
    (29) id -> . ID
    (33) matrix_element -> . id [ INTNUM , INTNUM ]
    (34) vector_element -> . id [ INTNUM ]

    $end            reduce using rule 1 (start -> .)
    {               shift and go to state 12
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    ID              shift and go to state 24

    start                          shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    instruction_if                 shift and go to state 4
    instruction_for                shift and go to state 5
    instruction_while              shift and go to state 6
    instruction_return             shift and go to state 7
    instruction_assign             shift and go to state 8
    instruction_print              shift and go to state 9
    break                          shift and go to state 10
    continue                       shift and go to state 11
    id                             shift and go to state 15
    assignable                     shift and go to state 18
    matrix_element                 shift and go to state 22
    vector_element                 shift and go to state 23

state 1

    (0) S' -> start .



state 2

    (2) start -> instructions .
    (4) instructions -> instructions . instruction
    (7) instruction -> . instruction_if
    (8) instruction -> . instruction_for
    (9) instruction -> . instruction_while
    (10) instruction -> . instruction_return ;
    (11) instruction -> . instruction_assign ;
    (12) instruction -> . instruction_print ;
    (13) instruction -> . break ;
    (14) instruction -> . continue ;
    (15) instruction -> . { instructions }
    (60) instruction_if -> . IF ( expr ) instruction
    (61) instruction_if -> . IF ( expr ) instruction ELSE instruction
    (62) instruction_for -> . FOR id = expr : expr instruction
    (63) instruction_while -> . WHILE ( expr ) instruction
    (16) instruction_return -> . RETURN
    (17) instruction_return -> . RETURN expr
    (24) instruction_assign -> . assignable = expr
    (25) instruction_assign -> . assignable ADDASSIGN expr
    (26) instruction_assign -> . assignable SUBASSIGN expr
    (27) instruction_assign -> . assignable MULASSIGN expr
    (28) instruction_assign -> . assignable DIVASSIGN expr
    (18) instruction_print -> . PRINT printables
    (5) break -> . BREAK
    (6) continue -> . CONTINUE
    (30) assignable -> . id
    (31) assignable -> . matrix_element
    (32) assignable -> . vector_element
    (29) id -> . ID
    (33) matrix_element -> . id [ INTNUM , INTNUM ]
    (34) vector_element -> . id [ INTNUM ]

    $end            reduce using rule 2 (start -> instructions .)
    {               shift and go to state 12
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    ID              shift and go to state 24

    instruction                    shift and go to state 25
    instruction_if                 shift and go to state 4
    instruction_for                shift and go to state 5
    instruction_while              shift and go to state 6
    instruction_return             shift and go to state 7
    instruction_assign             shift and go to state 8
    instruction_print              shift and go to state 9
    break                          shift and go to state 10
    continue                       shift and go to state 11
    id                             shift and go to state 15
    assignable                     shift and go to state 18
    matrix_element                 shift and go to state 22
    vector_element                 shift and go to state 23

state 3

    (3) instructions -> instruction .

    {               reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    FOR             reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    }               reduce using rule 3 (instructions -> instruction .)


state 4

    (7) instruction -> instruction_if .

    {               reduce using rule 7 (instruction -> instruction_if .)
    IF              reduce using rule 7 (instruction -> instruction_if .)
    FOR             reduce using rule 7 (instruction -> instruction_if .)
    WHILE           reduce using rule 7 (instruction -> instruction_if .)
    RETURN          reduce using rule 7 (instruction -> instruction_if .)
    PRINT           reduce using rule 7 (instruction -> instruction_if .)
    BREAK           reduce using rule 7 (instruction -> instruction_if .)
    CONTINUE        reduce using rule 7 (instruction -> instruction_if .)
    ID              reduce using rule 7 (instruction -> instruction_if .)
    $end            reduce using rule 7 (instruction -> instruction_if .)
    }               reduce using rule 7 (instruction -> instruction_if .)
    ELSE            reduce using rule 7 (instruction -> instruction_if .)


state 5

    (8) instruction -> instruction_for .

    {               reduce using rule 8 (instruction -> instruction_for .)
    IF              reduce using rule 8 (instruction -> instruction_for .)
    FOR             reduce using rule 8 (instruction -> instruction_for .)
    WHILE           reduce using rule 8 (instruction -> instruction_for .)
    RETURN          reduce using rule 8 (instruction -> instruction_for .)
    PRINT           reduce using rule 8 (instruction -> instruction_for .)
    BREAK           reduce using rule 8 (instruction -> instruction_for .)
    CONTINUE        reduce using rule 8 (instruction -> instruction_for .)
    ID              reduce using rule 8 (instruction -> instruction_for .)
    $end            reduce using rule 8 (instruction -> instruction_for .)
    }               reduce using rule 8 (instruction -> instruction_for .)
    ELSE            reduce using rule 8 (instruction -> instruction_for .)


state 6

    (9) instruction -> instruction_while .

    {               reduce using rule 9 (instruction -> instruction_while .)
    IF              reduce using rule 9 (instruction -> instruction_while .)
    FOR             reduce using rule 9 (instruction -> instruction_while .)
    WHILE           reduce using rule 9 (instruction -> instruction_while .)
    RETURN          reduce using rule 9 (instruction -> instruction_while .)
    PRINT           reduce using rule 9 (instruction -> instruction_while .)
    BREAK           reduce using rule 9 (instruction -> instruction_while .)
    CONTINUE        reduce using rule 9 (instruction -> instruction_while .)
    ID              reduce using rule 9 (instruction -> instruction_while .)
    $end            reduce using rule 9 (instruction -> instruction_while .)
    }               reduce using rule 9 (instruction -> instruction_while .)
    ELSE            reduce using rule 9 (instruction -> instruction_while .)


state 7

    (10) instruction -> instruction_return . ;

    ;               shift and go to state 26


state 8

    (11) instruction -> instruction_assign . ;

    ;               shift and go to state 27


state 9

    (12) instruction -> instruction_print . ;

    ;               shift and go to state 28


state 10

    (13) instruction -> break . ;

    ;               shift and go to state 29


state 11

    (14) instruction -> continue . ;

    ;               shift and go to state 30


state 12

    (15) instruction -> { . instructions }
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction
    (7) instruction -> . instruction_if
    (8) instruction -> . instruction_for
    (9) instruction -> . instruction_while
    (10) instruction -> . instruction_return ;
    (11) instruction -> . instruction_assign ;
    (12) instruction -> . instruction_print ;
    (13) instruction -> . break ;
    (14) instruction -> . continue ;
    (15) instruction -> . { instructions }
    (60) instruction_if -> . IF ( expr ) instruction
    (61) instruction_if -> . IF ( expr ) instruction ELSE instruction
    (62) instruction_for -> . FOR id = expr : expr instruction
    (63) instruction_while -> . WHILE ( expr ) instruction
    (16) instruction_return -> . RETURN
    (17) instruction_return -> . RETURN expr
    (24) instruction_assign -> . assignable = expr
    (25) instruction_assign -> . assignable ADDASSIGN expr
    (26) instruction_assign -> . assignable SUBASSIGN expr
    (27) instruction_assign -> . assignable MULASSIGN expr
    (28) instruction_assign -> . assignable DIVASSIGN expr
    (18) instruction_print -> . PRINT printables
    (5) break -> . BREAK
    (6) continue -> . CONTINUE
    (30) assignable -> . id
    (31) assignable -> . matrix_element
    (32) assignable -> . vector_element
    (29) id -> . ID
    (33) matrix_element -> . id [ INTNUM , INTNUM ]
    (34) vector_element -> . id [ INTNUM ]

    {               shift and go to state 12
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    ID              shift and go to state 24

    instructions                   shift and go to state 31
    instruction                    shift and go to state 3
    instruction_if                 shift and go to state 4
    instruction_for                shift and go to state 5
    instruction_while              shift and go to state 6
    instruction_return             shift and go to state 7
    instruction_assign             shift and go to state 8
    instruction_print              shift and go to state 9
    break                          shift and go to state 10
    continue                       shift and go to state 11
    id                             shift and go to state 15
    assignable                     shift and go to state 18
    matrix_element                 shift and go to state 22
    vector_element                 shift and go to state 23

state 13

    (60) instruction_if -> IF . ( expr ) instruction
    (61) instruction_if -> IF . ( expr ) instruction ELSE instruction

    (               shift and go to state 32


state 14

    (62) instruction_for -> FOR . id = expr : expr instruction
    (29) id -> . ID

    ID              shift and go to state 24

    id                             shift and go to state 33

state 15

    (30) assignable -> id .
    (33) matrix_element -> id . [ INTNUM , INTNUM ]
    (34) vector_element -> id . [ INTNUM ]

    =               reduce using rule 30 (assignable -> id .)
    ADDASSIGN       reduce using rule 30 (assignable -> id .)
    SUBASSIGN       reduce using rule 30 (assignable -> id .)
    MULASSIGN       reduce using rule 30 (assignable -> id .)
    DIVASSIGN       reduce using rule 30 (assignable -> id .)
    '               reduce using rule 30 (assignable -> id .)
    +               reduce using rule 30 (assignable -> id .)
    -               reduce using rule 30 (assignable -> id .)
    *               reduce using rule 30 (assignable -> id .)
    /               reduce using rule 30 (assignable -> id .)
    DOTADD          reduce using rule 30 (assignable -> id .)
    DOTSUB          reduce using rule 30 (assignable -> id .)
    DOTMUL          reduce using rule 30 (assignable -> id .)
    DOTDIV          reduce using rule 30 (assignable -> id .)
    >               reduce using rule 30 (assignable -> id .)
    <               reduce using rule 30 (assignable -> id .)
    EQ              reduce using rule 30 (assignable -> id .)
    NEQ             reduce using rule 30 (assignable -> id .)
    LEQ             reduce using rule 30 (assignable -> id .)
    GEQ             reduce using rule 30 (assignable -> id .)
    ;               reduce using rule 30 (assignable -> id .)
    ,               reduce using rule 30 (assignable -> id .)
    )               reduce using rule 30 (assignable -> id .)
    :               reduce using rule 30 (assignable -> id .)
    {               reduce using rule 30 (assignable -> id .)
    IF              reduce using rule 30 (assignable -> id .)
    FOR             reduce using rule 30 (assignable -> id .)
    WHILE           reduce using rule 30 (assignable -> id .)
    RETURN          reduce using rule 30 (assignable -> id .)
    PRINT           reduce using rule 30 (assignable -> id .)
    BREAK           reduce using rule 30 (assignable -> id .)
    CONTINUE        reduce using rule 30 (assignable -> id .)
    ID              reduce using rule 30 (assignable -> id .)
    ]               reduce using rule 30 (assignable -> id .)
    [               shift and go to state 34


state 16

    (63) instruction_while -> WHILE . ( expr ) instruction

    (               shift and go to state 35


state 17

    (16) instruction_return -> RETURN .
    (17) instruction_return -> RETURN . expr
    (35) expr -> . expr '
    (36) expr -> . ( expr )
    (37) expr -> . matrix_function ( expr )
    (38) expr -> . assignable
    (39) expr -> . matrix
    (40) expr -> . - expr
    (41) expr -> . INTNUM
    (42) expr -> . FLOAT
    (43) expr -> . expr + expr
    (44) expr -> . expr - expr
    (45) expr -> . expr * expr
    (46) expr -> . expr / expr
    (47) expr -> . expr DOTADD expr
    (48) expr -> . expr DOTSUB expr
    (49) expr -> . expr DOTMUL expr
    (50) expr -> . expr DOTDIV expr
    (51) expr -> . expr > expr
    (52) expr -> . expr < expr
    (53) expr -> . expr EQ expr
    (54) expr -> . expr NEQ expr
    (55) expr -> . expr LEQ expr
    (56) expr -> . expr GEQ expr
    (57) matrix_function -> . ZEROS
    (58) matrix_function -> . ONES
    (59) matrix_function -> . EYE
    (30) assignable -> . id
    (31) assignable -> . matrix_element
    (32) assignable -> . vector_element
    (64) matrix -> . [ vectors ]
    (29) id -> . ID
    (33) matrix_element -> . id [ INTNUM , INTNUM ]
    (34) vector_element -> . id [ INTNUM ]

    ;               reduce using rule 16 (instruction_return -> RETURN .)
    (               shift and go to state 37
    -               shift and go to state 41
    INTNUM          shift and go to state 42
    FLOAT           shift and go to state 43
    ZEROS           shift and go to state 44
    ONES            shift and go to state 45
    EYE             shift and go to state 46
    [               shift and go to state 47
    ID              shift and go to state 24

    expr                           shift and go to state 36
    matrix_function                shift and go to state 38
    assignable                     shift and go to state 39
    matrix                         shift and go to state 40
    id                             shift and go to state 15
    matrix_element                 shift and go to state 22
    vector_element                 shift and go to state 23

state 18

    (24) instruction_assign -> assignable . = expr
    (25) instruction_assign -> assignable . ADDASSIGN expr
    (26) instruction_assign -> assignable . SUBASSIGN expr
    (27) instruction_assign -> assignable . MULASSIGN expr
    (28) instruction_assign -> assignable . DIVASSIGN expr

    =               shift and go to state 48
    ADDASSIGN       shift and go to state 49
    SUBASSIGN       shift and go to state 50
    MULASSIGN       shift and go to state 51
    DIVASSIGN       shift and go to state 52


state 19

    (18) instruction_print -> PRINT . printables
    (19) printables -> . printable
    (20) printables -> . printables , printable
    (22) printable -> . expr
    (23) printable -> . str
    (35) expr -> . expr '
    (36) expr -> . ( expr )
    (37) expr -> . matrix_function ( expr )
    (38) expr -> . assignable
    (39) expr -> . matrix
    (40) expr -> . - expr
    (41) expr -> . INTNUM
    (42) expr -> . FLOAT
    (43) expr -> . expr + expr
    (44) expr -> . expr - expr
    (45) expr -> . expr * expr
    (46) expr -> . expr / expr
    (47) expr -> . expr DOTADD expr
    (48) expr -> . expr DOTSUB expr
    (49) expr -> . expr DOTMUL expr
    (50) expr -> . expr DOTDIV expr
    (51) expr -> . expr > expr
    (52) expr -> . expr < expr
    (53) expr -> . expr EQ expr
    (54) expr -> . expr NEQ expr
    (55) expr -> . expr LEQ expr
    (56) expr -> . expr GEQ expr
    (21) str -> . STRING
    (57) matrix_function -> . ZEROS
    (58) matrix_function -> . ONES
    (59) matrix_function -> . EYE
    (30) assignable -> . id
    (31) assignable -> . matrix_element
    (32) assignable -> . vector_element
    (64) matrix -> . [ vectors ]
    (29) id -> . ID
    (33) matrix_element -> . id [ INTNUM , INTNUM ]
    (34) vector_element -> . id [ INTNUM ]

    (               shift and go to state 37
    -               shift and go to state 41
    INTNUM          shift and go to state 42
    FLOAT           shift and go to state 43
    STRING          shift and go to state 57
    ZEROS           shift and go to state 44
    ONES            shift and go to state 45
    EYE             shift and go to state 46
    [               shift and go to state 47
    ID              shift and go to state 24

    printables                     shift and go to state 53
    printable                      shift and go to state 54
    expr                           shift and go to state 55
    str                            shift and go to state 56
    matrix_function                shift and go to state 38
    assignable                     shift and go to state 39
    matrix                         shift and go to state 40
    id                             shift and go to state 15
    matrix_element                 shift and go to state 22
    vector_element                 shift and go to state 23

state 20

    (5) break -> BREAK .

    ;               reduce using rule 5 (break -> BREAK .)


state 21

    (6) continue -> CONTINUE .

    ;               reduce using rule 6 (continue -> CONTINUE .)


state 22

    (31) assignable -> matrix_element .

    =               reduce using rule 31 (assignable -> matrix_element .)
    ADDASSIGN       reduce using rule 31 (assignable -> matrix_element .)
    SUBASSIGN       reduce using rule 31 (assignable -> matrix_element .)
    MULASSIGN       reduce using rule 31 (assignable -> matrix_element .)
    DIVASSIGN       reduce using rule 31 (assignable -> matrix_element .)
    '               reduce using rule 31 (assignable -> matrix_element .)
    +               reduce using rule 31 (assignable -> matrix_element .)
    -               reduce using rule 31 (assignable -> matrix_element .)
    *               reduce using rule 31 (assignable -> matrix_element .)
    /               reduce using rule 31 (assignable -> matrix_element .)
    DOTADD          reduce using rule 31 (assignable -> matrix_element .)
    DOTSUB          reduce using rule 31 (assignable -> matrix_element .)
    DOTMUL          reduce using rule 31 (assignable -> matrix_element .)
    DOTDIV          reduce using rule 31 (assignable -> matrix_element .)
    >               reduce using rule 31 (assignable -> matrix_element .)
    <               reduce using rule 31 (assignable -> matrix_element .)
    EQ              reduce using rule 31 (assignable -> matrix_element .)
    NEQ             reduce using rule 31 (assignable -> matrix_element .)
    LEQ             reduce using rule 31 (assignable -> matrix_element .)
    GEQ             reduce using rule 31 (assignable -> matrix_element .)
    ;               reduce using rule 31 (assignable -> matrix_element .)
    ,               reduce using rule 31 (assignable -> matrix_element .)
    )               reduce using rule 31 (assignable -> matrix_element .)
    :               reduce using rule 31 (assignable -> matrix_element .)
    {               reduce using rule 31 (assignable -> matrix_element .)
    IF              reduce using rule 31 (assignable -> matrix_element .)
    FOR             reduce using rule 31 (assignable -> matrix_element .)
    WHILE           reduce using rule 31 (assignable -> matrix_element .)
    RETURN          reduce using rule 31 (assignable -> matrix_element .)
    PRINT           reduce using rule 31 (assignable -> matrix_element .)
    BREAK           reduce using rule 31 (assignable -> matrix_element .)
    CONTINUE        reduce using rule 31 (assignable -> matrix_element .)
    ID              reduce using rule 31 (assignable -> matrix_element .)
    ]               reduce using rule 31 (assignable -> matrix_element .)


state 23

    (32) assignable -> vector_element .

    =               reduce using rule 32 (assignable -> vector_element .)
    ADDASSIGN       reduce using rule 32 (assignable -> vector_element .)
    SUBASSIGN       reduce using rule 32 (assignable -> vector_element .)
    MULASSIGN       reduce using rule 32 (assignable -> vector_element .)
    DIVASSIGN       reduce using rule 32 (assignable -> vector_element .)
    '               reduce using rule 32 (assignable -> vector_element .)
    +               reduce using rule 32 (assignable -> vector_element .)
    -               reduce using rule 32 (assignable -> vector_element .)
    *               reduce using rule 32 (assignable -> vector_element .)
    /               reduce using rule 32 (assignable -> vector_element .)
    DOTADD          reduce using rule 32 (assignable -> vector_element .)
    DOTSUB          reduce using rule 32 (assignable -> vector_element .)
    DOTMUL          reduce using rule 32 (assignable -> vector_element .)
    DOTDIV          reduce using rule 32 (assignable -> vector_element .)
    >               reduce using rule 32 (assignable -> vector_element .)
    <               reduce using rule 32 (assignable -> vector_element .)
    EQ              reduce using rule 32 (assignable -> vector_element .)
    NEQ             reduce using rule 32 (assignable -> vector_element .)
    LEQ             reduce using rule 32 (assignable -> vector_element .)
    GEQ             reduce using rule 32 (assignable -> vector_element .)
    ;               reduce using rule 32 (assignable -> vector_element .)
    ,               reduce using rule 32 (assignable -> vector_element .)
    )               reduce using rule 32 (assignable -> vector_element .)
    :               reduce using rule 32 (assignable -> vector_element .)
    {               reduce using rule 32 (assignable -> vector_element .)
    IF              reduce using rule 32 (assignable -> vector_element .)
    FOR             reduce using rule 32 (assignable -> vector_element .)
    WHILE           reduce using rule 32 (assignable -> vector_element .)
    RETURN          reduce using rule 32 (assignable -> vector_element .)
    PRINT           reduce using rule 32 (assignable -> vector_element .)
    BREAK           reduce using rule 32 (assignable -> vector_element .)
    CONTINUE        reduce using rule 32 (assignable -> vector_element .)
    ID              reduce using rule 32 (assignable -> vector_element .)
    ]               reduce using rule 32 (assignable -> vector_element .)


state 24

    (29) id -> ID .

    [               reduce using rule 29 (id -> ID .)
    =               reduce using rule 29 (id -> ID .)
    ADDASSIGN       reduce using rule 29 (id -> ID .)
    SUBASSIGN       reduce using rule 29 (id -> ID .)
    MULASSIGN       reduce using rule 29 (id -> ID .)
    DIVASSIGN       reduce using rule 29 (id -> ID .)
    '               reduce using rule 29 (id -> ID .)
    +               reduce using rule 29 (id -> ID .)
    -               reduce using rule 29 (id -> ID .)
    *               reduce using rule 29 (id -> ID .)
    /               reduce using rule 29 (id -> ID .)
    DOTADD          reduce using rule 29 (id -> ID .)
    DOTSUB          reduce using rule 29 (id -> ID .)
    DOTMUL          reduce using rule 29 (id -> ID .)
    DOTDIV          reduce using rule 29 (id -> ID .)
    >               reduce using rule 29 (id -> ID .)
    <               reduce using rule 29 (id -> ID .)
    EQ              reduce using rule 29 (id -> ID .)
    NEQ             reduce using rule 29 (id -> ID .)
    LEQ             reduce using rule 29 (id -> ID .)
    GEQ             reduce using rule 29 (id -> ID .)
    ;               reduce using rule 29 (id -> ID .)
    ,               reduce using rule 29 (id -> ID .)
    )               reduce using rule 29 (id -> ID .)
    :               reduce using rule 29 (id -> ID .)
    {               reduce using rule 29 (id -> ID .)
    IF              reduce using rule 29 (id -> ID .)
    FOR             reduce using rule 29 (id -> ID .)
    WHILE           reduce using rule 29 (id -> ID .)
    RETURN          reduce using rule 29 (id -> ID .)
    PRINT           reduce using rule 29 (id -> ID .)
    BREAK           reduce using rule 29 (id -> ID .)
    CONTINUE        reduce using rule 29 (id -> ID .)
    ID              reduce using rule 29 (id -> ID .)
    ]               reduce using rule 29 (id -> ID .)


state 25

    (4) instructions -> instructions instruction .

    {               reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 26

    (10) instruction -> instruction_return ; .

    {               reduce using rule 10 (instruction -> instruction_return ; .)
    IF              reduce using rule 10 (instruction -> instruction_return ; .)
    FOR             reduce using rule 10 (instruction -> instruction_return ; .)
    WHILE           reduce using rule 10 (instruction -> instruction_return ; .)
    RETURN          reduce using rule 10 (instruction -> instruction_return ; .)
    PRINT           reduce using rule 10 (instruction -> instruction_return ; .)
    BREAK           reduce using rule 10 (instruction -> instruction_return ; .)
    CONTINUE        reduce using rule 10 (instruction -> instruction_return ; .)
    ID              reduce using rule 10 (instruction -> instruction_return ; .)
    $end            reduce using rule 10 (instruction -> instruction_return ; .)
    }               reduce using rule 10 (instruction -> instruction_return ; .)
    ELSE            reduce using rule 10 (instruction -> instruction_return ; .)


state 27

    (11) instruction -> instruction_assign ; .

    {               reduce using rule 11 (instruction -> instruction_assign ; .)
    IF              reduce using rule 11 (instruction -> instruction_assign ; .)
    FOR             reduce using rule 11 (instruction -> instruction_assign ; .)
    WHILE           reduce using rule 11 (instruction -> instruction_assign ; .)
    RETURN          reduce using rule 11 (instruction -> instruction_assign ; .)
    PRINT           reduce using rule 11 (instruction -> instruction_assign ; .)
    BREAK           reduce using rule 11 (instruction -> instruction_assign ; .)
    CONTINUE        reduce using rule 11 (instruction -> instruction_assign ; .)
    ID              reduce using rule 11 (instruction -> instruction_assign ; .)
    $end            reduce using rule 11 (instruction -> instruction_assign ; .)
    }               reduce using rule 11 (instruction -> instruction_assign ; .)
    ELSE            reduce using rule 11 (instruction -> instruction_assign ; .)


state 28

    (12) instruction -> instruction_print ; .

    {               reduce using rule 12 (instruction -> instruction_print ; .)
    IF              reduce using rule 12 (instruction -> instruction_print ; .)
    FOR             reduce using rule 12 (instruction -> instruction_print ; .)
    WHILE           reduce using rule 12 (instruction -> instruction_print ; .)
    RETURN          reduce using rule 12 (instruction -> instruction_print ; .)
    PRINT           reduce using rule 12 (instruction -> instruction_print ; .)
    BREAK           reduce using rule 12 (instruction -> instruction_print ; .)
    CONTINUE        reduce using rule 12 (instruction -> instruction_print ; .)
    ID              reduce using rule 12 (instruction -> instruction_print ; .)
    $end            reduce using rule 12 (instruction -> instruction_print ; .)
    }               reduce using rule 12 (instruction -> instruction_print ; .)
    ELSE            reduce using rule 12 (instruction -> instruction_print ; .)


state 29

    (13) instruction -> break ; .

    {               reduce using rule 13 (instruction -> break ; .)
    IF              reduce using rule 13 (instruction -> break ; .)
    FOR             reduce using rule 13 (instruction -> break ; .)
    WHILE           reduce using rule 13 (instruction -> break ; .)
    RETURN          reduce using rule 13 (instruction -> break ; .)
    PRINT           reduce using rule 13 (instruction -> break ; .)
    BREAK           reduce using rule 13 (instruction -> break ; .)
    CONTINUE        reduce using rule 13 (instruction -> break ; .)
    ID              reduce using rule 13 (instruction -> break ; .)
    $end            reduce using rule 13 (instruction -> break ; .)
    }               reduce using rule 13 (instruction -> break ; .)
    ELSE            reduce using rule 13 (instruction -> break ; .)


state 30

    (14) instruction -> continue ; .
